# axum-explainer

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  router.rs  state.rs
src/handlers/: mod.rs  pages.rs  partials.rs
src/models/: content.rs  mod.rs  types.rs  view.rs
templates/: base.html  index.html  section_extractors.html  section_flow.html  section_handlers.html  section_middleware.html  section_responses.html  section_router.html  section_stack.html  section_state.html
templates/partials/: flow_steps.html  handler_sig.html  layer_detail.html  section_nav.html
templates/partials/extractors_code/: json_extractor.html  path_extractor.html  query_extractor.html  state_extractor.html
templates/partials/full_flow_code/: complete_minimal_server.html
templates/partials/handlers_code/: handler_that_can_fail.html  returns_json.html  simple_handler.html  status_code_only.html
templates/partials/middleware_code/: middleware_code.html
templates/partials/responses_code/: implementing_intoresponse_on_your_error_type.html
templates/partials/router_code/: example_router.html
templates/partials/state_code/: complete_state_setup.html
